--- a/profiles/cr/themes/custom/campaign_base/sass/variables/_mixins.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/variables/_mixins.scss
@@ -48,6 +48,7 @@
   .link--inline-#{nth($link, 1)} {
     border-bottom: 2px solid nth($link, 2);
     color: inherit;
+    text-decoration: none;
   }
 }
 
